# masmide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
scripts/: install-remote.sh
src/: app.rs  autocomplete.rs  config.rs  diagnostics.rs  docs.rs  input.rs  main.rs  masm_lang.rs  project.rs  syntax.rs  theme.rs
src/ui/: autocomplete.rs  command_bar.rs  editor.rs  editor_render.rs  file_tree.rs  help.rs  hover.rs  input_popup.rs  layout.rs  mod.rs  output.rs  search_bar.rs  status_bar.rs  tabs.rs
src/ui/editor/: buffer.rs  clipboard.rs  cursor.rs  edit.rs  mod.rs  render.rs  search.rs  selection.rs  undo.rs
templates/: hello.asm
